[gd_scene load_steps=4 format=3 uid="uid://b8118fc3rebas"]

[ext_resource type="Script" uid="uid://bm3faqkw7f0t7" path="res://addons/character_creator/editor/dock.gd" id="1_s6t3a"]
[ext_resource type="Script" uid="uid://coud0jww4k6mi" path="res://addons/character_creator/editor/local_configs_view.gd" id="2_3ku3b"]
[ext_resource type="Script" uid="uid://xe2v81jvmuqx" path="res://addons/character_creator/editor/config_tree_view.gd" id="3_g3awl"]

[node name="VBoxContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s6t3a")

[node name="PathConfig" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="PathConfig"]
layout_mode = 2
text = "Blender Export Path:"
custom_minimum_size = Vector2(150, 0)

[node name="PathEdit" type="LineEdit" parent="PathConfig"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "res://character_config"

[node name="BrowseButton" type="Button" parent="PathConfig"]
layout_mode = 2
text = "Browse"

[node name="RescanButton" type="Button" parent="PathConfig"]
layout_mode = 2
text = "ðŸ”„ Rescan"

[node name="Tabs" type="TabBar" parent="."]
layout_mode = 2
current_tab = 0
tab_count = 2
tab_0/title = "Global Config"
tab_1/title = "Local Configs"

[node name="Content" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="GlobalView" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_g3awl")

[node name="HSplit" type="HSplitContainer" parent="Content/GlobalView"]
layout_mode = 2
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="Content/GlobalView/HSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PropertiesPanel" type="VBoxContainer" parent="Content/GlobalView/HSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LocalView" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_3ku3b")

[node name="HBox" type="HBoxContainer" parent="Content/LocalView"]
layout_mode = 2

[node name="ConfigList" type="ItemList" parent="Content/LocalView/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Actions" type="VBoxContainer" parent="Content/LocalView/HBox"]
layout_mode = 2

[node name="NewButton" type="Button" parent="Content/LocalView/HBox/Actions"]
layout_mode = 2
text = "âž• New"

[node name="DuplicateButton" type="Button" parent="Content/LocalView/HBox/Actions"]
layout_mode = 2
text = "ðŸ“‹ Duplicate"

[node name="TreeView" type="VBoxContainer" parent="Content/LocalView"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_g3awl")

[node name="HSplit" type="HSplitContainer" parent="Content/LocalView/TreeView"]
layout_mode = 2
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="Content/LocalView/TreeView/HSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PropertiesPanel" type="VBoxContainer" parent="Content/LocalView/TreeView/HSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
